--- a/03_requests/3_requests.ipynb
+++ b/03_requests/3_requests.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JSON, YAML Y Requests"
+    "# Requests"
    ]
   },
   {
@@ -20,13 +20,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
-    "import itertools"
+    "import itertools\n",
+    "import os\n",
+    "\n",
+    "# from mis_funciones import guardar_json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a crear una función para guardar archivos `.json`. Para guardar un archivo json no son necesarias muchas líneas, pero quizá queremos hacer más cosas aparte de guardar el json. Por ejemplo asegurarnos de que el archivo no existe, hacer otra cosa si el archivo existe, etc. Si todo esto lo tenemos que poner en cada parte de nuestro programa donde trabajamos con json, lo más fácil es que se nos olvide cambiarlo en algún sitio y lo hagamos mal.\n",
+    "\n",
+    "En este caso lo mejor sería encapsular toda esta lógica en una función. Esta función la podemos guardar en un archivo `.py` (**NOTA**: este archivo estará en minúsculas y usará guión bajo \"`_`\", no espacios). Ahora podemos importar la función desde otros scripts de python. Si queremos modificar la lógica solamente tenemos que modificar esta función. No hará falta estar modificando lo mismo en todos lados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def guardar_json(datos, nombre_archivo):\n",
+    "    \n",
+    "    error = None\n",
+    "    \n",
+    "    if os.path.exists(nombre_archivo):\n",
+    "        print(\"el archivo ya existe\")\n",
+    "        error = FileExistsError\n",
+    "        return [archivo for archivo in os.listdir() if not archivo.startswith(\".\") and not archivo.startswith(\"_\")], error\n",
+    "\n",
+    "    string_json = json.dumps(datos)\n",
+    "\n",
+    "    with open(nombre_archivo, \"w\") as f:\n",
+    "        f.write(string_json)\n",
+    "\n",
+    "    return nombre_archivo, error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el archivo ya existe\n"
+     ]
+    }
+   ],
+   "source": [
+    "valor_devuelto, error = guardar_json(datos={\"a\": 1, \"b\": 2}, nombre_archivo=\"backup.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valor_devuelto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if error:\n",
+    "    raise error"
    ]
   },
   {
@@ -60,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,11 +225,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "datos = contenido.decode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**HTML**\n",
+    "\n",
+    "Del mismo modo que podemos recibir una respuesta en fromato json, podemos recibirla en formato HTML. En este caso vamos a hacer una petición `get` a una página web normal (no una API que devuelve JSON)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultado = requests.get(\"https://www.eltiempo.es/barcelona.html?q=barcelona&c=prediction\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtenemos el HTML que nos ha devuelto. (Podemos hacerle un `print()` si queremos)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = resultado.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para procesar el HTML lo mejor es utilizar una librería específica. Hacerlo usando métodos de strings sería una locura.\n",
+    "\n",
+    "```sh\n",
+    "# activamos entorno virtual\n",
+    "# leemos la documentación: https://www.crummy.com/software/BeautifulSoup/bs4/doc/#installing-beautiful-soup\n",
+    "\n",
+    "python3 -m pip install beautifulsoup4\n",
+    "\n",
+    "python3 -m pip install lxml\n",
+    "```\n",
+    "\n",
+    "Ya podemos utilizarla."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "soup = BeautifulSoup(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag = soup.div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'div'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tag.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [tag.name for tag in soup.find_all(\"div\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De aquí en adelante lo mejor será guiarse por la documentación oficial de la librería:\n",
+    "\n",
+    "https://www.crummy.com/software/BeautifulSoup/bs4/doc/#quick-start"
    ]
   },
   {
@@ -170,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,25 +382,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'userId': 1,\n",
-       " 'id': 10,\n",
-       " 'title': 'illo est ratione doloremque quia maiores aut',\n",
-       " 'completed': True}"
+       "True"
       ]
      },
-     "execution_count": null,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[9]"
+    "data[9][\"completed\"]"
    ]
   },
   {
@@ -280,6 +467,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for elemento in data:\n",
+    "#     if elemento[\"completed\"]:\n",
+    "#         print(elemento)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -296,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,6 +505,339 @@
     "    if elemento[\"completed\"]:\n",
     "        # print(elemento)\n",
     "        completados.append(elemento[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titulo = data[0][\"title\"]\n",
+    "lista_titulo = titulo.split()\n",
+    "primera_palabra = lista_titulo[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def procesar_elemento(elemento):\n",
+    " \n",
+    "    titulo = elemento[\"title\"]\n",
+    "    lista_titulo = titulo.split()\n",
+    "    primera_palabra = lista_titulo[0]\n",
+    "\n",
+    "    primera_palabra_minus = primera_palabra.lower()\n",
+    "    palabra_reemplazada = primera_palabra_minus.replace(\"a\", \"---\")\n",
+    "    \n",
+    "    dictionary[primera_palabra_minus] = palabra_reemplazada\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    return palabra_reemplazada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['et',\n",
+       " 'quo',\n",
+       " 'illo',\n",
+       " 'vero',\n",
+       " 'ips---',\n",
+       " 'repellendus',\n",
+       " '---b',\n",
+       " '---ccus---mus',\n",
+       " 'quo',\n",
+       " 'molesti---e',\n",
+       " 'ull---m',\n",
+       " 'distinctio',\n",
+       " 'volupt---s',\n",
+       " '---liqu---m',\n",
+       " 'verit---tis',\n",
+       " 'nemo',\n",
+       " 'repellendus',\n",
+       " 'excepturi',\n",
+       " 'tot---m',\n",
+       " 'tempore',\n",
+       " 'cum',\n",
+       " 'cupidit---te',\n",
+       " 'quis',\n",
+       " 'volupt---tum',\n",
+       " 'deleniti',\n",
+       " 'et',\n",
+       " 'odit',\n",
+       " 'doloremque',\n",
+       " 'sint',\n",
+       " 'sequi',\n",
+       " 'eum',\n",
+       " 'tempore',\n",
+       " 'suscipit',\n",
+       " 'quidem',\n",
+       " 'et',\n",
+       " 'incidunt',\n",
+       " 'l---ud---ntium',\n",
+       " 'sequi',\n",
+       " 'molesti---e',\n",
+       " 'null---',\n",
+       " 'in',\n",
+       " 'odio',\n",
+       " 'vel',\n",
+       " 'debitis',\n",
+       " 'tot---m',\n",
+       " '---d',\n",
+       " '---',\n",
+       " '---utem',\n",
+       " '---ut',\n",
+       " 'ips---',\n",
+       " 'inventore',\n",
+       " 'provident',\n",
+       " 'ut',\n",
+       " 'volupt---tem',\n",
+       " 'null---',\n",
+       " 'qui',\n",
+       " 'et',\n",
+       " 'pl---ce---t',\n",
+       " '---ut',\n",
+       " 'explic---bo',\n",
+       " 'm---iores',\n",
+       " 'molesti---e',\n",
+       " 'eum',\n",
+       " '---ccus---mus',\n",
+       " 'rerum',\n",
+       " 'volupt---tem',\n",
+       " 'n---m',\n",
+       " 'dolorem',\n",
+       " 'debitis',\n",
+       " 'debitis',\n",
+       " 'ex',\n",
+       " 'omnis',\n",
+       " 'e---',\n",
+       " 'fugi---t',\n",
+       " 'l---ud---ntium',\n",
+       " 'nesciunt',\n",
+       " 'omnis',\n",
+       " 'debitis',\n",
+       " 'inventore',\n",
+       " 'omnis',\n",
+       " 'vel',\n",
+       " 'culp---',\n",
+       " '---ccus---mus',\n",
+       " 'temporibus',\n",
+       " 'rerum',\n",
+       " 'rerum',\n",
+       " 'consequuntur',\n",
+       " 'dignissimos',\n",
+       " 'quis',\n",
+       " 'numqu---m']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[procesar_elemento(elem) for elem in data if elem[\"completed\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mis_funciones import guardar_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('procesados.json', None)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guardar_json(dictionary, \"procesados.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['---ut',\n",
+       " 'ut',\n",
+       " 'veni---m',\n",
+       " 'molliti---',\n",
+       " 'ull---m',\n",
+       " 'expedit---',\n",
+       " 'perspici---tis',\n",
+       " 'doloremque',\n",
+       " 'est',\n",
+       " 'repell---t',\n",
+       " 'it---que',\n",
+       " 'non',\n",
+       " 'tot---m',\n",
+       " '---ut',\n",
+       " 'tot---m',\n",
+       " 'doloribus',\n",
+       " 'sit',\n",
+       " '---ut',\n",
+       " 'cum',\n",
+       " 'qui---',\n",
+       " 'quibusd---m',\n",
+       " '---met',\n",
+       " 'perferendis',\n",
+       " 'solut---',\n",
+       " 'volupt---tem',\n",
+       " 'qui',\n",
+       " 'reprehenderit',\n",
+       " 'necessit---tibus',\n",
+       " 'exercit---tionem',\n",
+       " 'dolorum',\n",
+       " 'l---bore',\n",
+       " 'et',\n",
+       " 'dict---',\n",
+       " 'velit',\n",
+       " 'pl---ce---t',\n",
+       " 'consequ---tur',\n",
+       " 'p---ri---tur',\n",
+       " 'eum',\n",
+       " 'volupt---tibus',\n",
+       " 'id',\n",
+       " 'sint',\n",
+       " 'sequi',\n",
+       " 'velit',\n",
+       " 'f---cilis',\n",
+       " 'tempore',\n",
+       " '---dipisci',\n",
+       " '---ut',\n",
+       " 'est',\n",
+       " 'eum',\n",
+       " 'verit---tis',\n",
+       " '---ut',\n",
+       " 'modi',\n",
+       " 'suscipit',\n",
+       " 'l---borios---m',\n",
+       " 'volupt---tes',\n",
+       " '---',\n",
+       " 'enim',\n",
+       " '---b',\n",
+       " 'sunt',\n",
+       " 'non',\n",
+       " 'f---cilis',\n",
+       " '---ccus---ntium',\n",
+       " 'impedit',\n",
+       " '---tque',\n",
+       " 'quos',\n",
+       " 'et',\n",
+       " 'qu---e',\n",
+       " 'modi',\n",
+       " 'ducimus',\n",
+       " 'l---borios---m',\n",
+       " 'et',\n",
+       " 'consectetur',\n",
+       " 'qu---si',\n",
+       " 'omnis',\n",
+       " 'culp---',\n",
+       " 'e---',\n",
+       " 'doloribus',\n",
+       " 'ips---',\n",
+       " 'illo',\n",
+       " 'sit',\n",
+       " 'doloribus',\n",
+       " 'non',\n",
+       " 'eum',\n",
+       " 'qui',\n",
+       " 'qu---s',\n",
+       " 'volupt---s',\n",
+       " '---met',\n",
+       " 'eligendi',\n",
+       " '---peri---m',\n",
+       " 'pr---esentium',\n",
+       " 'corrupti',\n",
+       " 'quos',\n",
+       " 'perferendis',\n",
+       " 'quo',\n",
+       " 'quis',\n",
+       " 'qui---',\n",
+       " '---liqu---m',\n",
+       " 'provident',\n",
+       " '---d',\n",
+       " '---ut',\n",
+       " 'solut---',\n",
+       " 'pl---ce---t',\n",
+       " 'cupidit---te',\n",
+       " 'modi',\n",
+       " 'dignissimos',\n",
+       " 'odio',\n",
+       " '---nimi',\n",
+       " 'qu---s',\n",
+       " 'ut',\n",
+       " '---peri---m']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[\n",
+    "    elemento[\"title\"].split()[1].lower().replace(\"a\", \"---\")\n",
+    "    for elemento in data\n",
+    "    if not elemento[\"completed\"]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[elemento[\"id\"] for elemento in data if elemento[\"completed\"]] # == completados"
    ]
   },
   {
@@ -421,9 +952,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "basic",
+   "display_name": "teach",
    "language": "python",
-   "name": "basic"
+   "name": "teach"
   },
   "language_info": {
    "codemirror_mode": {
@@ -435,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
