--- a/03_requests/ejercicio_requests.ipynb
+++ b/03_requests/ejercicio_requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "* Usando la API: https://exchangeratesapi.io/\n",
     "    * Hay que entrar a la web y ahi sale la \"documentación\". Debéis usar la URL correcta para lo que queréis hacer.\n",
     "* Crear una función de conversión de divisas.\n",
-    "* La función acepta 2 parámetros. El primer parámetro son la contidad de \"EUR\". El otro parámetro es la divisa a la que queremos convertir. \n",
+    "* La función acepta 2 parámetros. El primer parámetro son la cantidad de \"EUR\". El otro parámetro es la divisa a la que queremos convertir. \n",
     "\n",
     "**Extra**\n",
     "* Añadir un tercer parámetro `lista=False`.\n",
@@ -28,12 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conversor(cantidad, divisa, lista=False):\n",
-    "    \n",
+    "\n",
+    "\n",
     "    url = \"https://api.exchangeratesapi.io/latest\"\n",
     "    res = requests.get(url)\n",
     "    data = res.json()\n",
@@ -119,34 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conversor(quantity, currency, return_list=False):\n",
     "\n",
-    "    return (\n",
-    "        (\n",
-    "            quantity\n",
-    "            * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][\n",
-    "                currency\n",
-    "            ]\n",
-    "        )\n",
-    "        if not return_list\n",
-    "        else (\n",
-    "            quantity\n",
-    "            * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][\n",
-    "                currency\n",
-    "            ],\n",
-    "            list(\n",
-    "                requests.get(\"https://api.exchangeratesapi.io/latest\")\n",
-    "                .json()[\"rates\"]\n",
-    "                .keys()\n",
-    "            ),\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "result, listed = conversor(25, \"USD\", return_list=True)"
+    "    return (quantity * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][currency]) if not return_list else (quantity * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][currency], list(requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"].keys()))"
    ]
   },
   {
@@ -154,7 +134,221 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(lambda quantity, currency, return_list: (quantity * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][currency]) if not return_list else (quantity * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][currency], list(requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"].keys())))(25, \"USD\", return_list=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28.215,\n",
+       " ['CAD',\n",
+       "  'HKD',\n",
+       "  'ISK',\n",
+       "  'PHP',\n",
+       "  'DKK',\n",
+       "  'HUF',\n",
+       "  'CZK',\n",
+       "  'AUD',\n",
+       "  'RON',\n",
+       "  'SEK',\n",
+       "  'IDR',\n",
+       "  'INR',\n",
+       "  'BRL',\n",
+       "  'RUB',\n",
+       "  'HRK',\n",
+       "  'JPY',\n",
+       "  'THB',\n",
+       "  'CHF',\n",
+       "  'SGD',\n",
+       "  'PLN',\n",
+       "  'BGN',\n",
+       "  'TRY',\n",
+       "  'CNY',\n",
+       "  'NOK',\n",
+       "  'NZD',\n",
+       "  'ZAR',\n",
+       "  'USD',\n",
+       "  'MXN',\n",
+       "  'ILS',\n",
+       "  'GBP',\n",
+       "  'KRW',\n",
+       "  'MYR'])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    lambda quantity, currency, return_list: (\n",
+    "        quantity\n",
+    "        * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][\n",
+    "            currency\n",
+    "        ]\n",
+    "    )\n",
+    "    if not return_list\n",
+    "    else (\n",
+    "        quantity\n",
+    "        * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][\n",
+    "            currency\n",
+    "        ],\n",
+    "        list(\n",
+    "            requests.get(\"https://api.exchangeratesapi.io/latest\")\n",
+    "            .json()[\"rates\"]\n",
+    "            .keys()\n",
+    "        ),\n",
+    "    )\n",
+    ")(25, \"USD\", return_list=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = lambda quantity, currency, return_list: (quantity * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][currency]) if not return_list else (quantity * requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"][currency], list(requests.get(\"https://api.exchangeratesapi.io/latest\").json()[\"rates\"].keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28.215,\n",
+       " ['CAD',\n",
+       "  'HKD',\n",
+       "  'ISK',\n",
+       "  'PHP',\n",
+       "  'DKK',\n",
+       "  'HUF',\n",
+       "  'CZK',\n",
+       "  'AUD',\n",
+       "  'RON',\n",
+       "  'SEK',\n",
+       "  'IDR',\n",
+       "  'INR',\n",
+       "  'BRL',\n",
+       "  'RUB',\n",
+       "  'HRK',\n",
+       "  'JPY',\n",
+       "  'THB',\n",
+       "  'CHF',\n",
+       "  'SGD',\n",
+       "  'PLN',\n",
+       "  'BGN',\n",
+       "  'TRY',\n",
+       "  'CNY',\n",
+       "  'NOK',\n",
+       "  'NZD',\n",
+       "  'ZAR',\n",
+       "  'USD',\n",
+       "  'MXN',\n",
+       "  'ILS',\n",
+       "  'GBP',\n",
+       "  'KRW',\n",
+       "  'MYR'])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(25, \"USD\", return_list=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result, listed = conversor(25, \"USD\", return_list=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.215"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CAD',\n",
+       " 'HKD',\n",
+       " 'ISK',\n",
+       " 'PHP',\n",
+       " 'DKK',\n",
+       " 'HUF',\n",
+       " 'CZK',\n",
+       " 'AUD',\n",
+       " 'RON',\n",
+       " 'SEK',\n",
+       " 'IDR',\n",
+       " 'INR',\n",
+       " 'BRL',\n",
+       " 'RUB',\n",
+       " 'HRK',\n",
+       " 'JPY',\n",
+       " 'THB',\n",
+       " 'CHF',\n",
+       " 'SGD',\n",
+       " 'PLN',\n",
+       " 'BGN',\n",
+       " 'TRY',\n",
+       " 'CNY',\n",
+       " 'NOK',\n",
+       " 'NZD',\n",
+       " 'ZAR',\n",
+       " 'USD',\n",
+       " 'MXN',\n",
+       " 'ILS',\n",
+       " 'GBP',\n",
+       " 'KRW',\n",
+       " 'MYR']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listed"
+   ]
   },
   {
    "cell_type": "code",
@@ -166,9 +360,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "basic",
+   "display_name": "teach",
    "language": "python",
-   "name": "basic"
+   "name": "teach"
   },
   "language_info": {
    "codemirror_mode": {
@@ -180,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
