--- a/04_databases/ejercicio_requests-db.ipynb
+++ b/04_databases/ejercicio_requests-db.ipynb
@@ -1685,9 +1685,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "basic",
+   "display_name": "teach",
    "language": "python",
-   "name": "basic"
+   "name": "teach"
   },
   "language_info": {
    "codemirror_mode": {
