--- a/02_json-yaml/2_json_yaml.ipynb
+++ b/02_json-yaml/2_json_yaml.ipynb
@@ -925,6 +925,18 @@
    "display_name": "teach",
    "language": "python",
    "name": "teach"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
